--- a/index.css
+++ b/index.css
@@ -1,13 +1,5 @@
-.map-container-2{
-    overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
-    height:0;
-  }
-  .map-container-2 iframe{
-    left:0;
-    top:0;
-    height:50%;
-    width:50%;
-    position:absolute;
+
+  .map{
+    height: 40 px;
+    width: 40px;
   }
